# project_inside_pub

./: .gitignore  DIALOGUE_DECK.md  Makefile  PROJECT_DESCRIPTION.md  QUICKSTART.md  README.md  SUCCESS.md  TROUBLESHOOTING.md  check_server.sh  docker-compose.yml  fix_database.sh
backend/: .env.example  ACTIVITY_LLM_SETUP.md  API_DOCUMENTATION.md  FIX_DATABASE_PORT.md  FIX_DISTUTILS.md  FIX_MARKET_TESTS_JSONB.md  FIX_PYTHON_VERSION.md  FIX_TEST_DEPENDENCIES.md  FIX_UVICORN.md  LOVE_MAP_IMPLEMENTATION.md  MARKET_API_INTEGRATION.md  Makefile  ONBOARDING_IMPLEMENTATION.md  QUICK_START.md  README.md  SERVER_RUNNING.md  SPEAKER_EMBEDDING.md  START_SERVER.md  STT_LANGUAGES.md  TESTING_MARKET.md  VOICEPRINT_INTEGRATION.md  config.yaml.example  fix_rel_type.sql  install_and_run.sh  install_with_trusted_hosts.sh  pyproject.toml  quick_fix_distutils.sh  requirements-dev.txt  requirements-do.txt  requirements-full.txt  requirements-nemo.txt  requirements.txt  run_server.sh  start_dev.sh
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_migration.py  002_onboarding_schema.py  003_realtime_sessions.py  004_add_emoji_to_pokes.py  005_add_profile_picture.py  006_add_market_tables.py  007_add_market_item_relationships.py  009_add_love_map_tables.py  010_add_personality_type_jsonb.py  011_add_voice_sample_base64.py  012_add_voice_embedding_json.py  013_clear_resemblyzer_embeddings.py  014_compass_tables.py  015_context_summaries.py  016_activity_invites_planned_activities.py  017_add_user_personal_description_hobbies.py  018_dyad_planned_id_memory_entries.py  019_add_relationship_type_date.py  020_devices_table.py  021_planned_activity_scrapbook_layout.py  022_card_snapshot_invites_planned.py  023_discover_feed_tables.py  024_activity_want_to_try_mutual_matches.py  025_lounge_tables.py  026_lounge_messages_sender_nullable.py  027_kai_user_preferences.py  028_compass_events_processed_at.py  (+9 more)
backend/app/: __init__.py  config_store.py  gcp_credentials.py  main.py  readiness.py  settings.py
backend/docs/: NEMO_SETUP.md  STT_IAM_403.md  STT_V2.plan.md  STT_V2_event_bus.md  STT_V2_patch_semantics.md  STT_V2_sentence_heuristics.md  STT_V2_stabilizer.md
backend/scripts/: check_nemo.py  check_readiness.py  check_user.py  cleanup_demo_family.py  delete_user.py  delete_user.sql  grant_schema_public.py  grant_schema_public.sh  seed_activity_templates.py  seed_demo_family.py  seed_dev_bar_ouyang.py  seed_love_map_prompts.py  seed_remote_demo_family.sh  setup_env.sh
backend/tests/: conftest.py  test_activity_api.py  test_demo_family.py  test_diarization_utils.py  test_diarization_workers.py  test_market.py  test_nemo_sortformer_diarizer.py  test_readiness.py  test_routes_stt.py  test_script_boundary.py  test_speaker_timeline_attribution.py  test_stt_union_find.py  test_voice_assembly.py
(+419 files in other folders)
